# PTE-DocEx

./: .env.example  .gitignore  Makefile  README.md  docker-compose.core.yml  docker-compose.corp-network.yml  docker-compose.corp-proxy-host.yml  docker-compose.corp-windows.yml  docker-compose.dev.yml  docker-compose.dns-fix.yml  docker-compose.yml
design-assignment-parser/: .env.example  Dockerfile  README.md  corrections.example.yaml  docker-compose.yml  pyproject.toml
design-assignment-parser/app/: __init__.py  config.py  main.py
design-assignment-parser/app/api/: routes.py  schemas.py
design-assignment-parser/app/exporters/: json_exporter.py  rag_tokens.py  xml_exporter.py
design-assignment-parser/app/extractors/: fields.py  requirements.py  sections.py
design-assignment-parser/app/models/: canonical.py  layout.py  pipeline_state.py
design-assignment-parser/app/ocr/: extract.py
design-assignment-parser/app/parsers/: pdf_type.py
design-assignment-parser/app/pipeline/: job_store.py  orchestrator.py
design-assignment-parser/app/reports/: quality.py  validation_report.py
design-assignment-parser/app/schema_mapper/: mapper.py  registry.py
design-assignment-parser/app/validators/: xsd_validator.py
design-assignment-parser/design_assignment_parser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
design-assignment-parser/tests/: test_mapping.py  test_pipeline_smoke.py  test_schema_registry.py
rag-platform/: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
rag-platform/alembic/: env.py
rag-platform/alembic/versions/: 001_initial_schema.py  002_check_runs.py  003_pilot_feedback.py  004_document_rag_collection.py
rag-platform/apps/admin-ui/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package.json  vite.config.ts
rag-platform/apps/api/: Dockerfile
rag-platform/apps/worker/: Dockerfile
rag-platform/infra/: docker-compose.run.yml  docker-compose.yml
rag-platform/scripts/: ingest-sample.sh  pilot-itc.sh  query-sample.sh
rag-platform/tests/: test_aink_sprint4.py  test_collections.py  test_drawings_sprint3.py  test_engineering_token_schema.py  test_engineering_tokenizer.py  test_highlight_bbox.py  test_metadata.py  test_pte_pdf_parser.py  test_sparse_embedder.py  test_sprint5.py  test_tokenizer_sprint2.py
(+133 files in other folders)
